chore:add colors to tailwind config

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-    --primary: white;
-    --secondary: black;
+    --primary: #DCF2F1;
+    --secondary: #365486;
   }
 
 [class='dark'] {
