--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
     --secondary: #365486;
   }
 
-[class='dark'] {
+:root[class='dark'] {
     --primary: #070F2B;
     --secondary: #535C91;
 }
@@ -33,3 +33,5 @@
     border-radius: 14px;
     border: 3px solid var(--primary);
   }
+
+
